@@ -1,0 +1,1 @@
+build/xubuntu/* /usr/share/ubiquity-slideshow-xubuntu
