@@ -1,0 +1,13 @@
+<h1 class="title">Accessibility in Ubuntu</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li><!-- "your" refers to a large group that includes the reader. -->We want to make computers work for everyone, whatever your physical circumstances. So, we provide tools that make Ubuntu one of the most accessible operating systems around.</li>  
+	<li><!-- The string "Assistive Technologies Preferences" is describing a particular menu item: System > Preferences > Assistive Technologies, and the string "System menu" describes that section of the main menu. Note that certain words are kept the same to make the menu items discoverable. It is intentional that we are using soft descriptions instead of mapping out a rigid path for the user to follow. Please, if it is natural for your locale, consider the same convention. -->You can get at these tools in one place: the <em>Assistive Technologies Preferences,</em> inside the System Menu. From there, you can turn on helpful tools like <em>Orca</em>, to speak text on the screen, or dwell click to press mouse buttons automatically.</li>
+	<li><!-- As before, the string "Appearance Preferences" is describing a particular menu item: System > Preferences > Appearance. Certain words were kept the same to make the menu item discoverable. The previous string about Assistive Technologies Preferences explains that this is in the System menu, so there is no need to repeat that point. -->Remember to check out the <em>Appearance Preferences</em>, too. You can choose between different visual styles and even change the fonts that are used by applications.</li>
+</ul></div>
+
+</div>
+
+<img class="icon" src="icons/accessibility.png" alt="" />
