@@ -1,0 +1,13 @@
+<h1 class="title"><!-- "Empathy" refers to the instant messaging client in the Internet menu -->Keep in contact with Empathy</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li><!-- Again, "Empathy" is the instant messaging client. We do not need to describe its name on the menu precisely here, unless it is natural to do so -->With <em>Empathy</em>, Ubuntu keeps you connected right from the start. It works with all the major instant messaging networks, including Google Talk, Windows Live and Jabber.</li>
+	<li>New messages appear in the envelope to the left of the clock, so you can see what's happening at a glance.</li>
+	<li><!-- The string "Empathy IM" should be the exact name of the Empathy menu item in your locale. -->Choose <em>Empathy IM Client</em> from the Internet Applications menu to set up your accounts.</li>
+</ul></div>
+
+</div>
+
+<img class="icon" src="icons/empathy.png" alt="" />
