@@ -1,0 +1,15 @@
+<h1 class="title">Browse the web with Firefox</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li>Ubuntu comes with the widely acclaimed <em>Firefox 3.5</em> web browser.</li>
+	<li>It protects your privacy and personal information so you can surf worry free.</li>
+	<li>Add your own personal note. Choose from thousands of themes and Add-ons that tailor Firefox to how you use the web.</li>
+</ul></div>
+
+</div>
+<!-- We use the absolute path to the Firefox icon rather than an image from
+slides/icons because we don't know at build time if this will be the real
+Firefox icon or the Abrowser one. -->
+<p class="icon"><img src="/usr/share/pixmaps/firefox-3.5.png" id="reflection" /></p>
