@@ -1,0 +1,99 @@
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+	<title>ubiquity-slideshow-ubuntu</title>
+	
+	<link href="link/general.css" rel="stylesheet" type="text/css" />
+	
+	<base target="_blank" />
+	
+	<script type="text/javascript" src="link/prototype.js"></script>
+	<script type="text/javascript" src="link/effects.js"></script>
+	<script type="text/javascript" src="link/fastinit.js"></script>
+	<script type="text/javascript" src="link/crossfade.js"></script>
+	
+	<script type="text/javascript" src="directory.js"></script>
+	<script type="text/javascript" src="link/slideshow.js"></script>
+	
+	<script src="link/scriptaculous.js" type="text/javascript"></script>
+</head>
+
+<body>
+
+<div id="container">
+	<div id="slideshow">
+		
+		<!-- Slides go here. Simply place the following snippet
+		in the order you wish it to appear, replacing "MY SLIDE"
+		with the filename of your slide.
+		<div><a href="MY SLIDE" class="load"></a></div> -->
+		<div><a href="welcome.html" class="load"></a></div>
+		<div><a href="firefox.html" class="load"></a></div>
+		<div><a href="fspot.html" class="load"></a></div>
+		<div><a href="rhythmbox-totem.html" class="load"></a></div>
+		<div><a href="evolution.html" class="load"></a></div> 
+		<div><a href="empathy.html" class="load"></a></div>
+		<div><a href="openoffice.html" class="load"></a></div>
+		<div><a href="accessibility.html" class="load"></a></div>
+		<div><a href="installing-software.html" class="load"></a></div>
+		<div><a href="ubuntuone.html" class="load"></a></div>
+		<div><a href="documentation.html" class="load"></a></div>
+	</div>
+</div>
+
+<div id="debug-controls">
+<input type="button" id="prev-slide" value="&lt;"/>
+<input type="text"   id="current-slide" />
+<input type="button" id="next-slide" value="&gt;"/>
+</div>
+
+<script type="text/javascript"> 
+var Reflector = {
+  reflect: function(element) {
+    element = $(element);
+    options = $H({
+      amount: 1/3,
+      opacity: 1/3,
+      fade: 2,
+      blur: 0
+    }).merge(arguments[1] || {});
+ 
+    var p = element.parentNode, n = element.nextSibling;
+    var d = 1.0/(element.height*options.amount);
+    var f = document.createDocumentFragment();
+ 
+    (element.height*options.amount).times( function(line) {
+      var blurdir = 0;
+      var opacitymodifier= 1;
+      var heightmodifier= 1;
+      if (options.blur==1) { 
+        blurdir = (line % 2); 
+        opacitymodifier = 2;
+        heightmodifier = 3;
+      }
+      var h = Builder.node('div',{
+        style: 'height:'+heightmodifier+'px; width:'+element.width+'px;'
+              +'background-image:url('+element.src+');'
+              +'background-position:0'+(heightmodifier-2)+'px 0'+(line+1)+'px;'
+              +'overflow:hidden;'
+              +'margin-top:-'+(heightmodifier-1)+'px;'
+      });
+      $(h).setOpacity(Math.pow(1-d*line,options.fade)*options.opacity/opacitymodifier); // IE needs the $()
+      f.appendChild(h);
+    });
+ 
+    // update the view now
+    p.insertBefore(f,n);
+  }
+}
+ 
+Event.observe(window,'load', function(){
+  Reflector.reflect('reflection',{ amount:2/3, opacity:1/2, blur:1 });
+});
+</script>
+
+</body>
+
+</html>
