@@ -1,0 +1,13 @@
+<h1 class="title">Installing additional software</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li><!-- "Ubuntu Software Center" should be the name of the menu item for software-center. "install" and "remove" should mirror the strings used for those tasks within the software-center application. -->Take a look at the <em>Ubuntu Software Center</em> to install (and remove) software from our online repository, which we carefully organize to be safe and up to date.</li>
+	<li>There is great software for everything from creating music and movies to producing 3D models and exploring the universe.</li>
+	<li>If you need something that isn't available through us, find out if there is a Debian package or another repository available. That way, it will be really easy to install and you will receive automatic updates.</li>
+</ul></div>
+
+</div>
+
+<img class="icon" src="icons/softwarecenter.png" alt="" />
