@@ -1,0 +1,14 @@
+<h1 class="title">Welcome</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li>Thank you for choosing Ubuntu 9.10.</li>
+	<li>We believe that every computer user should be able to work in the environment of their choice and be free to download, change, study and share this software for any purpose, without paying licensing fees.</li>
+	<li>As part of our promise, we want Ubuntu to work as well for you as possible. So, while it installs, this slideshow will give you a quick introduction.</li>
+</ul>
+<p class="special">Ubuntu is designed to be easy. Feel free to explore!</p></div>
+
+</div>
+
+<img class="icon" src="icons/ubuntu-logo.png" alt="" />
