@@ -1,5 +1,6 @@
 ubiquity-slideshow-ubuntu (13) UNRELEASED; urgency=low
 
+  [ Dylan McCall ]
   * Updated localization setup and build scripts. Localization
     is now done with a single template file for each slideshow
     package.
@@ -7,6 +8,9 @@ ubiquity-slideshow-ubuntu (13) UNRELEASED; urgency=low
     slides have actually been translated.
   * Added htmlclean to remove unnecessary content from built
     slides.
+
+  [ Lionel Le Folgoc ]
+  * Initial import of Xubuntu slides lp: #514011
 
  -- Dylan McCall <dylan@dylan-laptop>  Sun, 24 Jan 2010 23:42:14 -0800
 
